Less List types, slightly less copying and clearer Stream chain