@@ -1,7 +1,6 @@
 package carpet.mixins;
 
 import carpet.fakes.RecipeManagerInterface;
-import com.google.common.collect.Lists;
 import net.minecraft.core.Registry;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.registries.Registries;
@@ -9,10 +8,8 @@ import net.minecraft.world.item.Item;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeHolder;
@@ -30,10 +27,13 @@ public class RecipeManager_scarpetMixin implements RecipeManagerInterface
     {
         Map<ResourceLocation, RecipeHolder<?>> typeRecipes = recipes.get(type);
         // happens when mods add recipe to the registry without updating recipe manager
-        if (typeRecipes == null) return Collections.emptyList();
-        if (typeRecipes.containsKey(output)) return Collections.singletonList(typeRecipes.get(output).value());
+        if (typeRecipes == null) return List.of();
+        if (typeRecipes.containsKey(output)) return List.of(typeRecipes.get(output).value());
         final Registry<Item> regs = registryAccess.registryOrThrow(Registries.ITEM);
-        return Lists.newArrayList(typeRecipes.values().stream().map(RecipeHolder::value).filter(
-                r -> regs.getKey(r.getResultItem(registryAccess).getItem()).equals(output)).collect(Collectors.toList()));
+        return typeRecipes.values()
+                .stream()
+                .<Recipe<?>>map(RecipeHolder::value)
+                .filter(r -> regs.getKey(r.getResultItem(registryAccess).getItem()).equals(output))
+                .toList();
     }
 }
